Added  L5-Swagger and API documentation.
