# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\TagController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\UserController;
@@ -13,5 +14,12 @@ Route::middleware('auth:sanctum')->group(function() {
     Route::controller(UserController::class)->prefix('user')->group(function() {
         Route::get('info', 'info')->name('user.info');
         Route::post('unregister', 'unregister')->name('user.unregister');
+    });
+
+    Route::controller(TagController::class)->prefix('tag')->group(function() {
+        Route::get('', 'list')->name('tag.list');
+        Route::post('', 'create')->name('tag.create');
+        Route::put('', 'update')->name('tag.update');
+        Route::delete('', 'delete')->name('tag.delete');
     });
 });
